# Echo

./: .covergerc  .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  Makefile  README.md  README_PyPI.md  SUMMARY.md  installation.md  keras_activations_demo.py  requirements.txt  setup.cfg  setup.py  torch_activations_demo.py  torch_srelu_demo.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  main.yml  python-app.yml
Echo/: __init__.py
Echo/Activation/Keras/: __init__.py  custom_activations.py
Echo/Activation/Tensorflow/: custom_activation.py
Echo/Activation/Torch/: apl.py  aria2.py  bent_id.py  beta_mish.py  brelu.py  elish.py  eswish.py  fts.py  functional.py  hard_elish.py  isrlu.py  isru.py  logsigmoid.py  mila.py  mish.py  silu.py  sine_relu.py  soft_clipping.py  soft_exponential.py  softplus.py  sqnl.py  swish.py  swishx.py  weightedTanh.py
Smoke_tests/: keras_activations_demo.py  tf_keras_activations_demo.py  torch_activations_demo.py  torch_apl_demo.py  torch_brelu_demo.py  torch_maxout_demo.py  torch_softexp_demo.py  torch_srelu_demo.py
Unit_tests/: torch_activation_tests.py
docs/: environment.yml
docs/source/: conf.py  index.rst
echoAI/: __init__.py
echoAI/Activation/: README.md  __init__.py  m_ops.py  t_ops.py  tf_ops.py
echoAI/AttentionCV/: README.md
echoAI/utils/: torch_utils.py
scripts/: black.sh  flake8.sh  linter.sh  verify.py
tests/: sb_t_ops.py  sb_tf_ops.py  test.py  test_t_ops.py  unit_t_ops.py
(+35 files in other folders)
