[metadata]
name = echoAI
author = Diganta Misra
author_email = mishradiganta91@gmail.com
url = https://xa9ax.gitbook.io/echo/
description = Python package containing all custom layers used in Neural Networks (Compatible with PyTorch, TensorFlow and MegEngine) 
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = MIT License


[flake8]
max-line-length = 120

exclude = .git,

ignore =
    E203, # whitespace before :
    E266,
    E305, 
    E402, #
    E501, # Line lengths are recommended to be no greater than 79 characters. (Disabled Temporarily)
    E721, #
    E741, #
    F403, #
    F405, 
    F821, 
    F811,
    F841, 
    F999,
    W503, # line break before binary operator
    W504, 
    C408,
    C901,
    E302,
    W291,
    E303,
    N812 # N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'

per-file-ignores = 
    __init__.py: F401

max-complexity = 18

select = B,C,E,F,W,T4,B9

[isort]
profile = black
